[gd_scene load_steps=6 format=3 uid="uid://crv21xccbkp0u"]

[ext_resource type="Script" path="res://province/province.gd" id="1_kr6sr"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_qjgfb"]
vertices = PackedVector2Array(0, 8, -8, 0, 0, -8, 8, 0)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(0, 8, -8, 0, 0, -8, 8, 0)])

[sub_resource type="Animation" id="Animation_qt4fn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.498039, 0.498039, 0.498039, 1)]
}

[sub_resource type="Animation" id="Animation_t88nd"]
resource_name = "selected"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.498039, 0.498039, 0.498039, 1), Color(0.87451, 0.87451, 0.87451, 1), Color(0.498039, 0.498039, 0.498039, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y2mag"]
_data = {
"RESET": SubResource("Animation_qt4fn"),
"selected": SubResource("Animation_t88nd")
}

[node name="province" type="Polygon2D"]
color = Color(0.498039, 0.498039, 0.498039, 1)
script = ExtResource("1_kr6sr")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_qjgfb")

[node name="id" type="Label" parent="."]
offset_left = -32.0
offset_top = -16.0
offset_right = 32.0
offset_bottom = 16.0
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 2147483648
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="hitbox"]

[node name="border" type="Line2D" parent="."]
width = 1.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y2mag")
}

[connection signal="input_event" from="hitbox" to="." method="_on_hitbox_input_event"]
[connection signal="mouse_entered" from="hitbox" to="." method="_on_hitbox_mouse_entered"]
[connection signal="mouse_exited" from="hitbox" to="." method="_on_hitbox_mouse_exited"]
